<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <EditText
            android:layout_toRightOf="@+id/username_icon"
            android:id="@+id/expense_add_edit_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/username_icon"
            android:layout_width="38dp"
            android:layout_height="57dp"
            android:padding="3dp"
            android:src="@drawable/rupee" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <EditText
            android:layout_toRightOf="@+id/username_icon1"
            android:id="@+id/transaction_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/enter_transaction_date"
            android:inputType="date" />

        <ImageView
            android:id="@+id/username_icon1"
            android:layout_width="38dp"
            android:layout_height="57dp"
            android:padding="3dp"
            android:src="@drawable/ic_baseline_calendar_today_24" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginBottom="2dp"
            android:text="@string/category"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/choose_category_spinner"
            android:layout_width="277sp"
            android:layout_height="48sp"
            android:layout_marginLeft="9sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:layout_toRightOf="@+id/category" />

        <ProgressBar
            android:id="@+id/select_cat_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminate="true"
            android:visibility="gone" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/etdot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:text="@string/type_of_transaction"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="14sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="40sp"
                android:layout_marginEnd="11sp"
                android:text="@string/credit"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="13sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="14sp"
                android:text="@string/debit"
                android:textSize="18sp" />
        </RadioGroup>
    </RelativeLayout>


</LinearLayout>